Fix translation icon spacing

--- a/src/app.css
+++ b/src/app.css
@@ -726,7 +726,7 @@ header {
     svg {
       opacity: 0.6;
       flex-shrink: 0;
-      margin: calc(var(--spacing) / 4) calc(var(--spacing) / 2);
+      margin: calc(var(--spacing) / 4);
     }
 
     @starting-style {
